# llm-log-remediator

./: .env  .gitignore  pyproject.toml  readme.md  run.py  run_api.py
api/: schemas.py  server.py
app/: config.py  embeddings.py  llm_fix.py  llm_fix_unused.py  main.py  model.py  remediation.py  repo_ops.py  scanner.py  stacktrace.py  storage.py
error_knowledge_db/: chroma.sqlite3
log_chroma_db/: chroma.sqlite3
